# cloud-networking-solutions

./: .gitignore  .pre-commit-config.yaml  README.md  ai-tech-talks
.github/workflows/: ci.yml
codelabs/: about.md
codelabs/agw-cuj-arun-egress-emcp/agent-datacommons/: deploy_agent.py  pyproject.toml  test_mcp.py
codelabs/agw-cuj-arun-egress-emcp/agent-datacommons/agent/: agent.py
codelabs/agw-cuj-arun-egress-emcp/endpoints/: register_endpoints.py
codelabs/agw-cuj-arun-egress-gmcp/agent-dj/: deploy_agent.py  pyproject.toml  setup.sql
codelabs/agw-cuj-arun-egress-gmcp/endpoints/: register_endpoints.py
codelabs/agw-cuj-arun-egress-vpc/agent-weather/: deploy_agent.py  pyproject.toml
codelabs/agw-cuj-arun-egress-vpc/agent-weather/agent/: agent.py
codelabs/agw-cuj-arun-egress-vpc/mcp-weather/: test_mcp.py
demos/agent-gateway/: README.md
demos/agent-gateway/scripts/: clear_registry_bindings.sh
demos/agent-gateway/terraform/: example.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
demos/service-extensions-gke-gateway/: README.md
networking-for-ai-inference/: .gitignore  deploy.sh  test_endpoints.sh
networking-for-ai-inference/docs/: manual-deployment-gke-gateway.md  manual-deployment-self-managed-gateway.md  routing_examples.md
networking-for-ai-inference/k8s/base/: computeclasses.yaml  kustomization.yaml  namespace.yaml
networking-for-ai-inference/k8s/crds/: kustomization.yaml
networking-for-ai-inference/terraform/: .terraform.lock.hcl  backend.tf  data.tf  main.tf  outputs.tf  variables.tf  versions.tf
(+196 files in other folders)
